--- a/public/fbtest.html
+++ b/public/fbtest.html
@@ -12,7 +12,7 @@
 <script>
 
 $(document).ready(function() {
-	$.ajaxSetup({ cache: true });
+	//$.ajaxSetup({ cache: true });
 	window.fbAsyncInit = function() {
 		FB.init({
 			appId      : '871627882901365',
